Feature/scrum 17 nassim - Fix Bug and improve the code